fix issues with rfp form align items to the left

--- a/src/components/form-fields/kt-docs-group/kt-docs.scss
+++ b/src/components/form-fields/kt-docs-group/kt-docs.scss
@@ -1,6 +1,6 @@
 .docs-group {
   display: grid;
-  grid-template-columns: 25% 75%;
+  grid-template-columns: 20% 80%;
 }
 
 .docs-wrapper__content {
